--- a/nlp_alvaro.ipynb
+++ b/nlp_alvaro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "id": "dee0d982",
    "metadata": {},
    "outputs": [
@@ -39,7 +39,7 @@
        "True"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,12 +64,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "id": "8524b6d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_summary(article_text):\n",
+    "def generate_summary_a(article_text):\n",
     "    summarizer = pipeline(\"summarization\", model=\"facebook/bart-large-cnn\")\n",
     "    \n",
     "    # BART tiene límite de tokens, cortar si el texto es muy largo\n",
@@ -81,12 +81,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "d8772ae2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def huggingface_classifier(data):\n",
+    "def classifier_a(data):\n",
     "    from transformers import pipeline\n",
     "\n",
     "    # Crear pipeline i definir model\n",
@@ -102,7 +102,7 @@
     "\n",
     "\n",
     "    article_text = \" \".join(data)[:1024]\n",
-    "    result = classifier(article_text, candidate_labels=possible_labels)\n",
+    "    result = classifier(article_text, candidate_labels=possible_labels, device=0)\n",
     "\n",
     "    print(\"Topic més probable:\", result['labels'][0])\n",
     "    print(\"Scores:\", list(zip(result['labels'], result['scores'])))\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "id": "45ad73fc",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "id": "2c56b209",
    "metadata": {},
    "outputs": [],
@@ -218,55 +218,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4991fff8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "execution_results = {}\n",
+    "\n",
     "def execution_1(url):\n",
     "    data = scrape_text(url)\n",
     "    tokens = title_article_preprocessing_a(data)\n",
-    "    results = huggingface_classifier(tokens)\n",
-    "    resume = generate_summary(data)\n",
+    "    results = classifier_a(tokens)\n",
+    "    resume = generate_summary_a(data)\n",
+    "\n",
+    "    save_results(results, 1)\n",
     "    print(f\"Resum de l'article: {resume}\")\n",
     "\n",
     "\n",
     "def execution_2(url):\n",
     "    data = scrape_text_refined(url)\n",
     "    tokens = title_article_preprocessing_a(data)\n",
-    "    results = huggingface_classifier(tokens)\n",
-    "    resume = generate_summary(data)\n",
+    "    results = classifier_a(tokens)\n",
+    "    resume = generate_summary_a(data)\n",
+    "\n",
+    "    save_results(results, 2)\n",
     "    print(f\"Resum de l'article: {resume}\")\n",
     "\n",
     "\n",
-    "def execution_3(url):\n",
-    "    data = scrape_text(url)\n",
-    "    tokens = title_article_preprocessing_b(data)\n",
-    "    results = huggingface_classifier(tokens)\n",
-    "    resume = generate_summary(data)\n",
-    "    print(f\"Resum de l'article: {resume}\")\n",
+    "# def execution_3(url):\n",
+    "#     data = scrape_text(url)\n",
+    "#     tokens = title_article_preprocessing_b(data)\n",
+    "#     results = classifier_a(tokens)\n",
+    "#     resume = generate_summary_a(data)\n",
+    "\n",
+    "#     save_results(results, 3)\n",
+    "#     print(f\"Resum de l'article: {resume}\")\n",
     "\n",
     "\n",
-    "def execution_4(url):\n",
-    "    data = scrape_text(url)\n",
-    "    tokens = title_article_preprocessing_a(data)\n",
-    "    results = train_model(tokens)\n",
-    "    resume = generate_summary(data)\n",
-    "    print(f\"Resum de l'article: {resume}\")\n",
+    "# def execution_4(url):\n",
+    "#     data = scrape_text(url)\n",
+    "#     tokens = title_article_preprocessing_a(data)\n",
+    "#     results = train_model(tokens)\n",
+    "#     resume = generate_summary_a(data)\n",
+    "\n",
+    "#     save_results(results, 4)\n",
+    "#     print(f\"Resum de l'article: {resume}\")\n",
     "\n",
     "\n",
-    "def execution_5(url):\n",
-    "    data = scrape_text(url)\n",
-    "    tokens = title_article_preprocessing_a(data)\n",
-    "    results = huggingface_classifier(tokens)\n",
-    "    resume = generate_summary_b(data)\n",
-    "    print(f\"Resum de l'article: {resume}\")\n",
+    "# def execution_5(url):\n",
+    "#     data = scrape_text(url)\n",
+    "#     tokens = title_article_preprocessing_a(data)\n",
+    "#     results = classifier_a(tokens)\n",
+    "#     resume = generate_summary_b(data)\n",
+    "\n",
+    "#     save_results(results, 5)\n",
+    "#     print(f\"Resum de l'article: {resume}\")\n",
+    "\n",
+    "\n",
+    "def save_results(results, num):\n",
+    "        execution_results[f\"execution_{num}\"] = {\n",
+    "        \"topic\": results['labels'][0],\n",
+    "        \"score\": results['scores'][0]\n",
+    "    }\n",
     "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 8,
    "id": "5a0f561c",
    "metadata": {},
    "outputs": [
@@ -333,7 +352,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resum de l'article: Repetitive DNA sequences, including transposable elements (TEs) and tandemly repeated satellite DNA (satDNAs), are found in high proportion in organisms across the Tree of Life. Grasshoppers have large genomes, averaging 9 Gb, that contain a high proportion of repetitive DNA, which has hampered progress in assembling reference genomes.\n"
+      "Resum de l'article: Repetitive DNA sequences, including transposable elements (TEs) and tandemly repeated satellite DNA (satDNAs), are found in high proportion in organisms across the Tree of Life. Grasshoppers have large genomes, averaging 9 Gb, that contain a high proportion of repetitive DNA, which has hampered progress in assembling reference genomes.\n",
+      "Execution Results Summary:\n",
+      "execution_1: Topic - science, Score - 0.6881455779075623\n",
+      "execution_2: Topic - science, Score - 0.5759952068328857\n"
      ]
     }
    ],
@@ -349,9 +371,80 @@
     "        print(f\"############# Execution 2: URL{url}\")\n",
     "        execution_2(url)\n",
     "\n",
+    "    print(\"Execution Results Summary:\")\n",
+    "    for key, value in execution_results.items():\n",
+    "        print(f\"{key}: Topic - {value['topic']}, Score - {value['score']}\")\n",
+    "\n",
     "\n",
     "\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0d011b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: https://download.pytorch.org/whl/cu118\n",
+      "Requirement already satisfied: torch in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (2.10.0+cpu)\n",
+      "Requirement already satisfied: torchvision in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (0.25.0+cpu)\n",
+      "Requirement already satisfied: torchaudio in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (2.10.0+cpu)\n",
+      "Requirement already satisfied: filelock in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (3.17.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (1.13.3)\n",
+      "Requirement already satisfied: networkx>=2.5.1 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: fsspec>=0.8.5 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (2025.3.2)\n",
+      "Requirement already satisfied: setuptools in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torch) (72.1.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torchvision) (2.1.3)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from torchvision) (11.1.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\alvaro\\anaconda3\\lib\\site-packages (from jinja2->torch) (3.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# %pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "905eb9fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available())  \u001b[38;5;66;03m# Debe devolver True\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mget_device_name(\u001b[38;5;241m0\u001b[39m))\n",
+      "File \u001b[1;32mc:\\Users\\Alvaro\\anaconda3\\Lib\\site-packages\\torch\\cuda\\__init__.py:599\u001b[0m, in \u001b[0;36mget_device_name\u001b[1;34m(device)\u001b[0m\n\u001b[0;32m    587\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_device_name\u001b[39m(device: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevice\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m    588\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Get the name of a device.\u001b[39;00m\n\u001b[0;32m    589\u001b[0m \n\u001b[0;32m    590\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    597\u001b[0m \u001b[38;5;124;03m        str: the name of the device\u001b[39;00m\n\u001b[0;32m    598\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 599\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m get_device_properties(device)\u001b[38;5;241m.\u001b[39mname\n",
+      "File \u001b[1;32mc:\\Users\\Alvaro\\anaconda3\\Lib\\site-packages\\torch\\cuda\\__init__.py:632\u001b[0m, in \u001b[0;36mget_device_properties\u001b[1;34m(device)\u001b[0m\n\u001b[0;32m    620\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_device_properties\u001b[39m(device: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevice\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m _CudaDeviceProperties:\n\u001b[0;32m    621\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124;03m\"\"\"Get the properties of a device.\u001b[39;00m\n\u001b[0;32m    622\u001b[0m \n\u001b[0;32m    623\u001b[0m \u001b[38;5;124;03m    Args:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    630\u001b[0m \u001b[38;5;124;03m        _CudaDeviceProperties: the properties of the device\u001b[39;00m\n\u001b[0;32m    631\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 632\u001b[0m     _lazy_init()  \u001b[38;5;66;03m# will define _get_device_properties\u001b[39;00m\n\u001b[0;32m    633\u001b[0m     device \u001b[38;5;241m=\u001b[39m _get_device_index(device, optional\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m    634\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m device \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m device \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m device_count():\n",
+      "File \u001b[1;32mc:\\Users\\Alvaro\\anaconda3\\Lib\\site-packages\\torch\\cuda\\__init__.py:417\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    412\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    413\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    414\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    415\u001b[0m     )\n\u001b[0;32m    416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 417\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    418\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    419\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    420\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    421\u001b[0m     )\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.cuda.is_available())  # Debe devolver True\n",
+    "print(torch.cuda.get_device_name(0))  # Nombre de tu GPU"
    ]
   }
  ],
