resum final del resultatas

--- a/nlp_alvaro.ipynb
+++ b/nlp_alvaro.ipynb
@@ -868,11 +868,203 @@
     "\n",
     "main()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9824585",
+   "metadata": {},
+   "source": [
+    "# Conclusions\n",
+    "## Article 1 (Genomes dels saltamartins)\n",
+    "---------------\n",
+    "- Execució 1\n",
+    "(Scrapper simple + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l'aticle, amb un 0.39 de score sobre \"science and research\"\n",
+    "\n",
+    "El resum és correcte, tot i que els primers càracters no parlen sobre l'article sinó els headers de la pàgina web, mes o menys a la meitat del resum comença a parlar sobre els genomes dels saltamartins. \n",
+    "\n",
+    "- Execució 2\n",
+    "\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l'article, tot i que el resum és poc vàlid, aconsegueix classificar-lo com a \"science and research\" amb una fiabilitat/ score de 0.50.\n",
+    "\n",
+    "El resum semblen paraules tirades aleatiòriament, tot i que conté paraules clau del article, la generació no ha sigut un resum.\n",
+    "\n",
+    "- Execució 3\n",
+    "(Scrapper avançat + spacy + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l'article, tot i que el resum és poc vàlid, aconsegueix classificar-lo com a \"science and research\" amb una fiabilitat/ score de 0.50.\n",
+    "\n",
+    "Encara que s'ha cambiat la manera de tokenitzar, genera el mateix resum que amb word_tokenizer, un \"resum\" incoherent que semblen paraules apliades aleatòriament.\n",
+    "\n",
+    "- Execució 4 \n",
+    "(Scrapper avançat + word_tokenizer + classifier model )\n",
+    "\n",
+    "Classifica correctament el tòpic de l'article. Al tractar-se de Naive Bayes, obtenim una puntuació quasi perfecte degut a que retorna el \"score\" en 1 i 0.\n",
+    "\n",
+    "- Execució 5\n",
+    "(Scrapper avançat + word_tokenizer + t5-base)\n",
+    "\n",
+    "El model classifica correctament el tòpic de l'article i otorga un 0.5 de score.\n",
+    "\n",
+    "El resum és correcte, contenint paraules clau de l'article i resumint-lo de forma simple.\n",
+    "\n",
+    "## Article 2 (Guerra a Gaza)\n",
+    "---------------\n",
+    "\n",
+    "- Execució 1\n",
+    "(Scrapper simple + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l’article com a “armed conflicts and wars”, amb un score aproximat de 0.28.\n",
+    "\n",
+    "El resum és parcialment correcte, recull idees clau però el text queda tallat i incomplet, amb frases interrompudes i sense una estructura clara de resum.\n",
+    "\n",
+    "- Execució 2\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El model torna a classificar correctament el tòpic com a “armed conflicts and wars”, amb un score de 0.25.\n",
+    "\n",
+    "El resum conté informació rellevant de l’article, però presenta els mateixos problemes que l’execució anterior: frases truncades, manca de coherència i absència d’una síntesi real del contingut.\n",
+    "\n",
+    "- Execució 3\n",
+    "(Scrapper avançat + spacy + bart)\n",
+    "\n",
+    "La classificació del tòpic es manté correcta, amb un score idèntic de 0.25.\n",
+    "\n",
+    "Tot i el canvi en la tokenització, el resum generat és pràcticament el mateix que amb word_tokenizer, fet que indica que el problema no està en la tokenització, sinó en la capacitat del model BART per generar un resum coherent en aquest context.\n",
+    "\n",
+    "- Execució 4\n",
+    "(Scrapper avançat + word_tokenizer + classifier model)\n",
+    "\n",
+    "El model classifica el tòpic com a “international” amb una puntuació gairebé perfecta.\n",
+    "\n",
+    "Aquesta fiabilitat tan alta s’explica pel tipus de model utilitzat, però la categoria escollida és massa general i menys precisa que “armed conflicts and wars” per al contingut específic de l’article.\n",
+    "\n",
+    "- Execució 5\n",
+    "(Scrapper avançat + word_tokenizer + t5-base)\n",
+    "\n",
+    "El model identifica correctament el tòpic principal com a “armed conflicts and wars”, amb un score de 0.25.\n",
+    "\n",
+    "El resum és el més coherent de tots, presenta idees completes, inclou dades clau i aconsegueix una síntesi més clara i entenedora de l’article, tot i que encara és bastant simple.\n",
+    "\n",
+    "## Article 3 (Jocs olimpics d'hivern (equip UK))\n",
+    "----------\n",
+    "- Execució 1\n",
+    "(Scrapper simple + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l’article com a “professional sports and athletes”, amb un score de 0.31.\n",
+    "\n",
+    "El resum és coherent i gramaticalment correcte, però no reflecteix el focus principal de l’article, ja que se centra sobretot en dades generals dels Jocs Olímpics i deixa de banda l’aspecte clau sobre les expectatives de medalles de l’equip britànic.\n",
+    "\n",
+    "- Execució 2\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El tòpic torna a ser classificat correctament com a “professional sports and athletes”, tot i que amb un score més baix de 0.24.\n",
+    "\n",
+    "El resum és més estructurat que a l’execució 1 i inclou informació rellevant, però continua prioritzant estadístiques globals dels Jocs en lloc del rendiment esperat de Gran Bretanya, que és l’eix central de l’article.\n",
+    "\n",
+    "- Execució 3\n",
+    "(Scrapper avançat + spacy + bart)\n",
+    "\n",
+    "La classificació del tòpic és idèntica a l’execució 2, amb el mateix score de 0.24.\n",
+    "\n",
+    "El canvi en la tokenització no aporta millores: el resum generat és pràcticament igual al de word_tokenizer, fet que indica que el model BART manté el mateix biaix cap a informació descriptiva general independentment del mètode de tokenització.\n",
+    "\n",
+    "- Execució 4\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El resum obtingut és equivalent al de les execucions 2 i 3, tant en contingut com en estructura.\n",
+    "\n",
+    "Això reforça la idea que el model tendeix a repetir patrons de resum i no adapta la síntesi segons matisos específics del text original.\n",
+    "\n",
+    "Execució 5\n",
+    "(Scrapper avançat + word_tokenizer + t5-base)\n",
+    "\n",
+    "- El model classifica correctament el tòpic com a “professional sports and athletes”, amb un score de 0.24.\n",
+    "\n",
+    "El resum és més proper al contingut clau de l’article, ja que introdueix les declaracions de la responsable de l’equip britànic i el context de les expectatives de medalles, tot i que continua sent breu i no recull tota la informació rellevant.\n",
+    "\n",
+    "## Article 4 (Politica respecte tensions Trump)\n",
+    "------------\n",
+    "- Execució 1\n",
+    "(Scrapper simple + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l’article com a “international political relations”, amb un score de 0.24.\n",
+    "\n",
+    "El resum és parcialment coherent, però massa fragmentari: introdueix idees rellevants com la dependència europea dels Estats Units i el paper de la tecnologia, però manca de context polític i no reflecteix clarament el detonant principal de l’article.\n",
+    "\n",
+    "- Execució 2\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "La classificació del tòpic es manté correcta, amb un score lleugerament inferior de 0.25.\n",
+    "\n",
+    "El resum incorpora exemples concrets, però presenta repeticions i una estructura poc clara, fet que impedeix que funcioni com un resum sintètic i ordenat.\n",
+    "\n",
+    "- Execució 3\n",
+    "(Scrapper avançat + spacy + bart)\n",
+    "\n",
+    "El tòpic identificat és el mateix, amb el mateix score de 0.20.\n",
+    "\n",
+    "Tot i el canvi en la tokenització, el resum generat és pràcticament idèntic al de l’execució 2, cosa que indica que la tokenització no influeix de manera significativa en la qualitat del resum en aquest cas.\n",
+    "\n",
+    "- Execució 4\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El contingut del resum és equivalent al de les execucions 2 i 3, repetint les mateixes idees i limitacions.\n",
+    "\n",
+    "Això reforça la idea que el model tendeix a reutilitzar fragments destacats del text sense transformar-los en una síntesi coherent del discurs polític i econòmic de l’article.\n",
+    "\n",
+    "- Execució 5\n",
+    "(Scrapper avançat + word_tokenizer + t5-base)\n",
+    "\n",
+    "El model classifica correctament el tòpic com a “international political relations”, amb un score de 0.20.\n",
+    "\n",
+    "El resum és el més complet i contextualitzat, recull la idea central de la necessitat d’independència europea, les dificultats estructurals per assolir-la i els límits dels acords comercials alternatius, oferint una síntesi més clara i propera al contingut original.\n",
+    "\n",
+    "## Article 5 (Descobriment cerebral clau en el Parkinson)\n",
+    "----------\n",
+    "Execució 1\n",
+    "(Scrapper simple + word_tokenizer + bart)\n",
+    "\n",
+    "El model identifica correctament el tòpic de l’article com a “health and medicine”, amb un score relativament alt de 0.44.\n",
+    "\n",
+    "El resum és clar i coherent, i recull adequadament la idea principal de l’article: la identificació d’una nova xarxa cerebral alterada en pacients amb Parkinson. Tot i això, el resum se centra sobretot en la part tècnica i deixa fora el context més ampli sobre la malaltia i la seva rellevància clínica.\n",
+    "\n",
+    "Execució 2\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "La classificació del tòpic es manté correcta, amb un score de 0.34.\n",
+    "\n",
+    "El resum és més sintètic que a l’execució 1 i recull els elements essencials. No obstant això, és força genèric i no destaca clarament l’impacte potencial dels resultats en futurs tractaments.\n",
+    "\n",
+    "Execució 3\n",
+    "(Scrapper avançat + spacy + bart)\n",
+    "\n",
+    "El tòpic identificat i el score són idèntics als de l’execució 2, score de 0.34.\n",
+    "\n",
+    "El canvi en la tokenització no produeix diferències apreciables, el resum és pràcticament igual, fet que indica que la tokenització no és un factor determinant en la qualitat del resum generat per BART en aquest cas.\n",
+    "\n",
+    "Execució 4\n",
+    "(Scrapper avançat + word_tokenizer + bart)\n",
+    "\n",
+    "El resum obtingut és equivalent al de les execucions 2 i 3, tant en contingut com en estructura.\n",
+    "\n",
+    "Això confirma que el model tendeix a repetir patrons de síntesi i a seleccionar les mateixes idees clau sense aprofundir ni variar l’enfocament del resum.\n",
+    "\n",
+    "Execució 5\n",
+    "(Scrapper avançat + word_tokenizer + t5-base)\n",
+    "\n",
+    "El model classifica correctament el tòpic com a “health and medicine”, amb un score de 0.34.\n",
+    "\n",
+    "El resum és el més complet i específic: inclou tant la identificació de la xarxa cerebral com el tipus de regions implicades, oferint una síntesi més propera al contingut científic de l’article."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -886,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
